--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_background">#191926</color>
+    <color name="menu_text_color">#6d6d80</color>
+    <color name="tag_color">#FF3466</color>
 </resources>
