--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,11 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="margin_x4">16dp</dimen>
+    <dimen name="margin_x1">4dp</dimen>
+    <dimen name="margin_x3">12dp</dimen>
+    <dimen name="margin_x8">32dp</dimen>
+    <dimen name="margin_x2">8dp</dimen>
+    <dimen name="path_start_margin">18dp</dimen>
+    <dimen name="margin_x6">24dp</dimen>
+    <dimen name="common_text_size">12sp</dimen>
 </resources>
